--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,7 +43,9 @@
     "react-day-picker": "^9.11.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.66.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "6.22.3",
+    "remark-gfm": "^4.0.1",
     "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
