--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "@react-three/fiber": "8.15.19",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "dagre": "^0.8.5",
     "date-fns": "^4.1.0",
     "embla-carousel": "^8.0.0",
     "embla-carousel-react": "^8.6.0",
@@ -45,6 +46,7 @@
     "react-hook-form": "^7.66.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "6.22.3",
+    "reactflow": "^11.11.4",
     "remark-gfm": "^4.0.1",
     "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.1",
