--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "embla-carousel": "^8.0.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.24",
+    "html-to-image": "^1.11.13",
     "lucide-react": "^0.553.0",
     "react": "18.3.1",
     "react-day-picker": "^9.11.1",
